tried to fix nav alignment

--- a/portfolio/stylesheet.css
+++ b/portfolio/stylesheet.css
@@ -17,7 +17,6 @@ nav ul div li {
   margin: 15px;
   padding: 30px;
   border-radius:0 ;
-  position: relative;
   font-family: Julius Sans One; 
  }
 
